--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
 html, body{
     height: 100%;
 }
+
+p {
+    color: #777777
+}
+
 h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #4aaaa5
@@ -39,7 +44,7 @@ header {
     padding: 30px;
     float: left;
     position: relative;
-    left: 20%;
+    left: 15%;
     
 }
 
@@ -76,18 +81,9 @@ header {
     background-color: #ddd;
    
    }
-
-
-
-
-
-
-
 #container {
     min-height: 100%;
 }  
-
-
 #content {
     box-sizing: border-box;
     overflow: auto;
@@ -97,8 +93,23 @@ header {
     background-color: #ffffff;
     border: 2px #dddddd;
     width: 960px;
-    height: 2000px;
+    height: 600px;
     margin: 150px auto;
+}
+#selfie {
+    margin: 5px 15px 15px 15px;
+    float: left;
+    width: 200px;
+    height: 200px;
+}
+
+#bioh1 {
+    padding: 15px 15px 5px 15px;
+}
+
+#aboutme {
+    border-top: 1px solid #4aaaa5;
+    width: 90%;
 }
 
 #footertext {
@@ -108,7 +119,7 @@ header {
     padding: 0;
     font-size: 10px;
     position: absolute;
-    top: 50%;
+    top: 75%;
     left: 50%;
     color: #ffffff
 }
