--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,15 @@ header {
     height: 600px;
     margin: 150px auto;
 }
+#gallery {
+    border: none;
+    width: 85%;
+    margin: 0 auto;
+}
+.galspec {
+    height: 150px;
+    width: 150px;
+}
 #selfie {
     margin: 5px 15px 15px 15px;
     float: left;
